--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>HYFN</title>
+    <span style="display: none">{{ standard_header_includes }}</span>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -37,5 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <span style="display: none">{{ standard_footer_includes }}</span>
   </body>
 </html>
