--- a/public/index-hubspot.html
+++ b/public/index-hubspot.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>HYFN</title>
+    <span style="display: none">{{ standard_header_includes }}</span>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -37,5 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <span style="display: none">{{ standard_footer_includes }}</span>
   </body>
 </html>
